--- a/05 Disposiciones/homework-05.css
+++ b/05 Disposiciones/homework-05.css
@@ -10,6 +10,6 @@
 
 .imagen-galeria {
     width: 300px;
-    height: 200px; /* Lo agregue porque se ve mejor */
+    height: 200px; /* Lo agregue porque se ve un poco mejor */
     margin: 10px 10px;
 }
